--- a/src/App.css
+++ b/src/App.css
@@ -50,20 +50,34 @@
 
 .navBarDiv{
   position: fixed;
-  right: 1svw;
+  right: 10svw;
   top: 0;
   z-index: 1;
-  width: 20svw;
+  width: 40svw;
 }
 
 .navMenu{
-  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
   border-radius: 10px;
-  width: 4svw;
+  width: 5svw;
   padding-left: 1svw;
   text-align: center;
   margin-left: 6.75svw;
-  border: 1px solid rgb(255, 217, 0);
+  /* border: 1px solid rgb(255, 217, 0); */
+  display: inline;
+  position: absolute;
+  right: 5.5svw;
+  top: .5svh;
+  user-select: none;
+}
+
+.menuIcon{
+  position: absolute;
+  width: 2svw;
+  aspect-ratio: 1;
+  display: inline;
+  top: 4.25svh;
+  right: 9.25svw;
 }
 
 .buttonDiv{
@@ -81,25 +95,98 @@
 .dropdown{
   position: absolute;
   top: 0svh;
-  width: 15svw;
-  height: 30svw;
-  left: 0;
+  width: 5svw;
+  height: 1svh;
+  left: 40svw;
   right: 0svw;
   top: 0svh;
   list-style: none;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(8, 8, 8);
   text-align: center;
   padding-right: 2svw;
-  padding-top: 10svh;
+  padding-top: 3svh;
   color: white;
   z-index: -1;
-  border-radius: 10px;
-  border: 3px solid white;
-  display: block;
+  border-radius: 50px;
+  border: 1px solid white;
+  display: inline;
+  transition: 1s;
+  transition-delay: 1s;
+  transition-property: width, height, left;
+}
+
+.dropdown:hover{
+  position: absolute;
+  top: 0svh;
+  width: 20svw;
+  height: 5svh;
+  left: 25svw;
+  right: 0svw;
+  top: 0svh;
+  list-style: none;
+  background-color: rgb(8, 8, 8);
+  text-align: center;
+  padding-right: 2svw;
+  padding-top: 3svh;
+  color: white;
+  z-index: -1;
+  border-radius: 50px;
+  border: 1px solid white;
+  display: inline;
   transition: .5s;
 }
 
-.dropdownPre{
+.dropdown:hover .navLinks{
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  color: rgb(182, 131, 30);
+  border: 1px solid rgb(127, 97, 36);
+  border-radius: 40px;
+  background-color: black;
+  padding: 10px 10px;
+  font-weight: 200;
+  font-family: myFont;
+  transition-delay: .5s, 1s;
+  transition-property: opacity, border-radius border-color;
+  opacity: 1;
+}
+
+/* .dropdown:hover .navLinks{
+  transition: 1s;
+} */
+
+.dropdown:hover .active{
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  color: rgb(255, 217, 0);
+  border: 1px solid rgb(255, 217, 0);
+  border-radius: 10px;
+  background-color: black;
+  padding: 10px 10px;
+  font-weight: 800;
+  font-family: myFont;
+  transition-delay: .5s;
+  transition-property: opacity;
+  opacity: 1;
+}
+
+.dropdown:hover .navLinks:hover{
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  color: rgb(255, 217, 0);
+  border: 1px solid rgb(255, 217, 0);
+  border-radius: 10px;
+  background-color: black;
+  padding: 10px 10px;
+  font-family: myFont;
+  transition: 1s;
+  opacity: 1;
+}
+
+/* .dropdownPre{
   position: absolute;
   top: 0svh;
   width: 15svw;
@@ -118,15 +205,16 @@
   border: 5px solid white;
   display: none;
   transition: .5s;
-}
+} */
 
 .navLi{
-  display: block;
+  display: inline;
   position: relative;
-  padding: 1svw 2svh;
+  padding: 1svw;
   text-align: center;
   color: white;
 }
+
 
 .navLinks{
   position: relative;
@@ -134,26 +222,49 @@
   text-decoration: none;
   color: rgb(182, 131, 30);
   border: 1px solid rgb(127, 97, 36);
-  border-radius: 5px;
+  border-radius: 40px;
   background-color: black;
   padding: 10px 10px;
-  transition: .5s;
+  font-weight: 200;
+  font-family: myFont;
+  transition-delay: 2s;
+  transition-property: opacity;
+  transition: 1s;
+  opacity: 0;
 }
 
-.dropdown .navLi  .navLinks{
+.dropdown .navLi  .navLinks .active{
   font-size: 15pt;
 }
 
-.navLinks:hover{
+
+.active{
   position: relative;
   text-align: center;
   text-decoration: none;
   color: rgb(255, 217, 0);
   border: 1px solid rgb(255, 217, 0);
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: black;
   padding: 10px 10px;
-  transition: .5s;
+  font-weight: 800;
+  font-family: myFont;
+  transition: 1s;
+  opacity: 0;
+}
+
+.active:hover{
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  color: rgb(255, 217, 0);
+  border: 1px solid rgb(255, 217, 0);
+  border-radius: 10px;
+  background-color: black;
+  padding: 10px 10px;
+  font-weight: 800;
+  font-family: myFont;
+  transition: 1s;
 }
 
 
