--- a/src/App.css
+++ b/src/App.css
@@ -456,15 +456,33 @@
   color: white;
 }
 
+.buttonScroll{
+  position: absolute;
+  left: 3svw;
+  color: rgb(255, 217, 0);
+  top: 80svh;
+  z-index: 1;
+}
+
+.buttonNote{
+  position: absolute;
+  left: 3svw;
+  color: rgb(255, 217, 0);
+  top: 82svh;
+  z-index: 1;
+}
+
 .bossGameMasterDiv{
   position: relative;
   left: 0;
   margin-left: -15svw;
+  margin-top: 35svh;
   width: 80svw;
   height: auto;
   /* background-color: black; */
   overflow-x: hidden;
 }
+
 
 .bossRankHeader{
   color: white;
